# lvglWithSdlDemo

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
include/: lv_conf.h  lv_drv_conf.h
src/: CMakeLists.txt  demo.c
