CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(LvglWithSdlDemo C)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

SET(CMAKE_C_STANDARD 99)
SET(PROJECT_DESCRIPTION "Demo code for using lvgl with SDL2 backend")
SET(PROJECT_URL "https://github.com/hanhsuan/lvglWithSdlDemo")
SET(PROJECT_ISSUES_URL "${PROJECT_URL}/issues")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)

# Based on: https://gitlab.kitware.com/cmake/cmake/issues/19460
IF(DEFINED CMAKE_OSX_SYSROOT)
    SET(CC "CC=${CMAKE_C_COMPILER} ${CMAKE_C_SYSROOT_FLAG} ${CMAKE_OSX_SYSROOT}")
ELSE()
    SET(CC "CC=${CMAKE_C_COMPILER}")
ENDIF()

IF("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
    SET(CMAKE_COMPILER_IS_CLANG ON)
ENDIF()

IF(MSVC)
    ADD_COMPILE_OPTIONS(/W4)
    ADD_COMPILE_OPTIONS(/Zc:preprocessor)
    ADD_COMPILE_DEFINITIONS(_CRT_SECURE_NO_WARNINGS)
ELSE()
    ADD_COMPILE_OPTIONS(-Wall)
ENDIF()

ADD_SUBDIRECTORY(src)
